--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <meta name="twitter:image" content="https://ea-experts.it.com/og-image.jpg">
 
   <!-- Stylesheet -->
+  <link rel="stylesheet" href="assets/static/app_generated_index-6937cd5a.D3Zb5v6a.css">
   
 </head>
   <body class="w-body">
